# ResNet

./: .gitignore  .perun.ini  .piplist.txt  pyproject.toml
experiments/job_1507471/: loss.pt  time.pt  train_acc.pt  valid_acc.pt
experiments/job_1507471/perun/: perun.hdf5  perun_2025-03-18T19:21:59.082046.txt
experiments/job_1507485/: loss.pt  time.pt  train_acc.pt  valid_acc.pt
experiments/job_1507485/perun/: perun_2025-03-18T22:22:17.465987.txt
resnet/: dataloader.py  dummy_dataloader.py  model.py  train.py  train_with_timings.py
resnet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
resnet/eval_utils/: eval_utils.py  plot_utils.py  plot_utils_varying_lbs.py  read_utils.py  table_utils.py
scripts/: eval_gpus.py  eval_timings.py  evaluation.py  main.py
submission_scripts/: submit.sh  submit_all.py  submit_all.sh  submit_horeka.sh  submit_tmpdir.sh
