[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["resnet"]

[project]
name = "resnet"
version = "0.0.1"
authors = [
  {name="Philipp Huber"},
]
description = "ResNet"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "numpy==2.2.5",
    "h5py==3.13.0",
    "scipy==1.15.3",
    "torch==2.7.0",
    "torchvision==0.22.0",
    "mpi4py==4.0.3",
    "perun[mpi,nvidia,rocm]==0.8.10",
    "matplotlib==3.10.3"
]

[tool.ruff]
# Same as Black.
line-length = 132
indent-width = 4

# Exclude a variety of commonly ignored directories.
exclude = [
    "*.egg-info",
    ".git",
    ".git-rewrite",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "site-packages",
    "*.log",
    "experiments",
]
